# sem04-cpp-project

./: .gitignore  CMakeLists.txt  Makefile  Makefile_copy  README.md  ball.hpp  direction.hpp  main.cpp  main2  main2.cpp  paddle.hpp  pong  pong.cpp  release.sh
Actors/: ball.cpp  ball.hpp  paddle.cpp  paddle.hpp  score.cpp  score.hpp  wall.cpp  wall.hpp
Game/: game.cpp  game.hpp
Utils/: constants.hpp
